# pose_evaluator

./: CMakeLists.txt  package.xml
include/pose_evaluator/: camera_pinhole_measurement_model.hpp  filter.hpp  filter_factory.hpp  measurement_model.hpp  object_pinhole_measurement_model.hpp  pinhole_point_measurement_model.hpp  plane_motion_measurement_model.hpp  process_model.hpp  random_accel_process_model.hpp  simple.hpp  simple_filter.hpp  so3_utils.hpp  state.hpp  state_ops.hpp  ukf.hpp  white_noise_rigid_body_model.hpp
msg/: CameraImageStamped.msg  DetectedPoint.msg  DetectedPoints.msg
resources/: aruco_detector_parameters.yaml  camera.yaml  image_extractor_parameters.yaml  image_publisher_parameters.yaml  image_stream_publisher_parameters.yaml  latest_image_publisher_parameters.yaml  latest_image_publisher_parameters_lab.yaml  pose_evaluator_parameters.yaml
src/aruco_detector/: aruco_detector_node.cpp
src/image_extractor/: image_extractor.cpp
src/image_publisher/: image_publisher.cpp  image_stream_publisher.cpp
src/latest_image_publisher/: latest_image_publisher_node.cpp
src/pose_evaluator/: pose_evaluator_node.cpp
src/test_cov/: test_cov_node.cpp
